--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
@@ -119,7 +119,7 @@
     <link name="{{ root }}">
 
       <!-- Body physics {-->
-      {{ components.multirotor_physics_macro(
+      {{ generic.multirotor_physics_macro(
         mass = mass,
         body_radius = body_radius,
         body_height = body_height,
@@ -231,7 +231,7 @@
 
       {%- endfor -%}
 
-      {{ components.leg_offset_macro(
+      {{ generic.leg_collision_offset_macro(
         name = "leg_3d_print_front_right",
         mesh_file = leg_3d_print_mesh_file,
         mesh_scale = mesh_scale,
@@ -249,7 +249,7 @@
         offset_z = -0.07)
       }}
 
-     {{ components.leg_offset_macro(
+     {{ generic.leg_collision_offset_macro(
         name = "leg_3d_print_front_left",
         mesh_file = leg_3d_print_mesh_file,
         mesh_scale = mesh_scale,
@@ -267,7 +267,7 @@
         offset_z = -0.07)
       }}
 
-      {{ components.leg_offset_macro(
+      {{ generic.leg_collision_offset_macro(
         name = "leg_3d_print_back_left",
         mesh_file = leg_3d_print_mesh_file,
         mesh_scale = mesh_scale,
@@ -285,7 +285,7 @@
         offset_z = -0.07)
       }}
 
-      {{ components.leg_offset_macro(
+      {{ generic.leg_collision_offset_macro(
         name = "leg_3d_print_back_right",
         mesh_file = leg_3d_print_mesh_file,
         mesh_scale = mesh_scale,
@@ -582,7 +582,7 @@
     </link>
 
     <!-- Propellers {-->
-    {{ components.prop_macro_2_meshes(
+    {{ generic.prop_macro_2_meshes(
       direction = "ccw",
       rotor_velocity_slowdown_sim = rotor_velocity_slowdown_sim,
       motor_constant = motor_constant,
@@ -616,7 +616,7 @@
       izz = prop_izz)
     }}
 
-    {{ components.prop_macro_2_meshes(
+    {{ generic.prop_macro_2_meshes(
       direction = "ccw",
       rotor_velocity_slowdown_sim = rotor_velocity_slowdown_sim,
       motor_constant = motor_constant,
@@ -650,7 +650,7 @@
       izz = prop_izz)
     }}
 
-    {{ components.prop_macro_2_meshes(
+    {{ generic.prop_macro_2_meshes(
       direction = "cw",
       rotor_velocity_slowdown_sim = rotor_velocity_slowdown_sim,
       motor_constant = motor_constant,
@@ -684,7 +684,7 @@
       izz = prop_izz)
     }}
 
-    {{ components.prop_macro_2_meshes(
+    {{ generic.prop_macro_2_meshes(
       direction = "cw",
       rotor_velocity_slowdown_sim = rotor_velocity_slowdown_sim,
       motor_constant = motor_constant,
